# steyngun-dav

./: .gitignore  DAV_Viva_Prep.md  pyproject.toml
Python/01_SLR/: README.md  data.csv  practice.py
Python/02_MLR/: __init__.py  practice.py
Python/04_ARIMA/: README.md
Python/05_Text_Analytics/: README.md  __init__.py  word_frequency.py
Python/06_Visualization/: code.py
Python/07_Data_Cleaning/: code.py
Python/arima/: __init__.py
Python/data_cleaning/: README.md
Python/logistic/: code.py  data.csv
Python/slr/: code.py
Python/text_analytics/: data.csv
Python/visualization/: README.md
R/01_SLR/: README.md  code.R
R/02_MLR/: code.R
R/03_Logistic/: README.md  code.R
R/04_ARIMA/: code.R  data.csv
R/05_Text_Analytics/: tfidf_analysis.R
R/07_Data_Cleaning/: data.csv
R/data_cleaning/: README.md
R/mlr/: data.csv
R/text_analytics/: README.md  sentiment_analysis.R
steyngun_dav/: README.md  __init__.py
steyngun_dav/python/arima/: code.py  practice.py
steyngun_dav/python/logistic/: README.md  __init__.py
steyngun_dav/python/mlr/: README.md  code.py
steyngun_dav/python/slr/: __init__.py  sklearn_slr.py
steyngun_dav/python/text_analytics/: sentiment_analysis.py  tfidf_analysis.py
steyngun_dav/python/visualization/: code.py  data.csv
steyngun_dav/r/: __init__.py
steyngun_dav/r/arima/: README.md
steyngun_dav/r/data_cleaning/: code.R
steyngun_dav/r/mlr/: README.md
steyngun_dav/r/text_analytics/: word_frequency.R
steyngun_dav/r/visualization/: README.md  code.R
